fix: Improve hero section layout and background
Adjusted the hero section to align text towards the bottom and bring the marquee closer. Removed explicit background color from body to allow the `FluidBackground` component to manage it. The `FluidBackground` component was simplified to only contain a black background and a subtle spotlight effect, removing the background image and parallax effects.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       body {
         font-family: 'Space Grotesk', sans-serif;
-        background-color: #000000; /* Pure Black Base */
+        /* Background color removed */
         color: #fff;
         overflow-x: hidden;
       }
